# llm-atlas

./: .env.example  .gitattributes  .gitignore  CHECKLIST.md  EXTRACTION_IMPROVEMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KISSKI_SETUP.md  LICENSE  MIGRATION_TO_KISSKI.md  MODEL_EVALUATION_WORKFLOW.md  PIPELINE_UPDATE_MODEL_FAMILY_GROUPING.md  README.md  TEST_PLAN.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_kisski_api.py
.github/workflows/: ci.yml
config/: config.yaml
data/: extracted_model_papers.csv  llama3_paper_R1355181.json  orkg_template_R609825.json
data/evaluation_reports/: gpt1_report.json  gpt1_strict_baseline.json  llama2_report.json  report.json
data/extracted/: .gitkeep  1810.04805v2_20260223_214225.json  1810.04805v2_20260224_004337.json  1906.08237v2_20260303_063820.json  1909.05858v2_20260223_214812.json  1909.05858v2_20260224_011841.json  1909.11942v6_20260220_070918.json  1909.11942v6_20260224_002725.json  1910.10683v4_20260226_022027.json  1910.13461v1_20260220_071732.json  1910.13461v1_20260224_003941.json  1911.00536v3_20260223_215030.json  1911.00536v3_20260224_013120.json  2003.10555v1_20260224_013507.json  2005.14165v4_20260224_044611.json  2005.14165v4_20260226_061819.json  2006.03654v6_20260223_214919.json  2006.03654v6_20260224_012501.json  2006.03654v6_20260226_004726.json  2007.14062v2_20260225_222250.json  2010.11929v2_20260224_003805.json  2101.03961v3_20260225_155946.json  2102.12092v2_20260225_170729.json  2103.00020v1_20260225_021919.json  2103.14030v2_20260225_155249.json  2106.02039v4_20260226_143456.json  (+45 more)
docs/: NEXT_STEPS_TESTING.md  PROFESSOR_SUMMARY_EVALUATION_AND_CONTRIBUTIONS.html  PROFESSOR_SUMMARY_EVALUATION_AND_CONTRIBUTIONS.md  evaluation-scoring-analysis.md  extraction-improvement-plan.md  few-shot-improvement-guide.md  paper-list-and-pdf-only.md  run-extract-and-evaluate-pdf-url.md
examples/: example_usage.py
finetuning/: README.md  __init__.py  config.py  evaluate.py  inference.py  prepare_dataset.py  train.py
grete/: README.md
notebooks/: validate_extraction.ipynb
results/: final_results_table.csv
scripts/: aggregate_model_evaluation.py  append_to_paper.py  batch_extract_all_papers.py  build_papers_list.py  build_results_table.py  filter_arxiv_exact_only.py  import_extracted_to_model_folders.py  list_kisski_models.py  sandbox_upload.py  sync_papers_list_with_gold.py  test_contribution_selector.py  test_extraction_workflow.py  test_merge_evaluation.py  test_model_merger.py
src/: __init__.py  baseline_filter.py  comparison_updater.py  extraction_normalizer.py  llm_extractor.py  llm_extractor_transformers.py  model_contribution_selector.py  model_variant_merger.py  orkg_client.py  orkg_manager.py  paper_fetcher.py  pdf_parser.py  pipeline.py  template_mapper.py
tests/: __init__.py  test_llm_extractor.py  test_orkg_append.py  test_orkg_client.py  test_pdf_parser.py  test_pipeline.py
(+1157 files in other folders)
